--- a/about.html
+++ b/about.html
@@ -5,8 +5,6 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
    <link rel="stylesheet" id="stylesheet">
    <script src="site.js"></script>
-   <script src="gallery_layout.js"></script>
-   <script src="photos.js"></script>
 </head>
 <body>
    <div id="nav_container">
@@ -18,10 +16,17 @@
       <div id="nav_bar_filler_space"></div>
       <div id="nav_menu"></div>
    </div>
-      <div id="content">
-         <div id="album_menu" class="submenu"></div>
-         <div id="image_menu" class="submenu"></div>
-         <div id="image_display"></div>
-      </div>
+   <div id="content">
+      <p class="content-text">
+         Hello, I'm Lily and this is my portfolio you've stumbled upon.
+
+         <br><br>
+         Contact: <a href="mailto:lilyzh@umd.edu">lilyzh@umd.edu</a>
+
+         <br/><br/>
+
+         If you're viewing on desktop, the painting to the left is <a href="https://www.nga.gov/collection/art-object-page.46531.html" target="_blank">Pandora by Odilon Redon</a>, on permanent view at the National Gallery in Washington.
+      </p>
+   </div>
 </body>
 </html>
