--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
    <meta charset="utf-8">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-   <link rel="stylesheet" href="site.css">
-   <link rel="stylesheet" href="mobile.css">
+   <link rel="stylesheet" id="stylesheet">
    <script src="site.js"></script>
+   <script type="text/javascript">
+      window.location.href = 'drawing.html';
+   </script>
 </head>
-<body>
+<!-- <body>
    <div id="nav_container">
       <div id="nav_icon"></div>
       <div id="nav_title"></div>
+      <div id="nav_bar">
+         <img id="hamburger" src="images/hamburger.png"/>
+      </div>
+      <div id="nav_bar_filler_space"></div>
       <div id="nav_menu"></div>
    </div>
    <div id="content">
@@ -22,8 +28,5 @@
          <small>Painting: <a href="https://www.nga.gov/collection/art-object-page.46531.html" target="_blank">Pandora, Odilon Redon</a>.</small>
       </p>
    </div>
-   <div id="mobile_display">
-      This website is not supported on your device.
-   </div>
-</body>
+</body> -->
 </html>
