--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
          Hello, I'm Lily and this is my portfolio you've stumbled upon.
 
          <br><br>
-         Contact: <a href="mailto:lilyzh@umd.edu">lilyzh@umd.edu</a>
+         Get in touch at <a href="mailto:lilyzh@umd.edu">lilyzh@umd.edu</a>
 
          <br/><br/>
 
